@@ -1,1 +1,2 @@
 DIST leim-1.33-pkg.tar.gz 1804772 SHA256 d64a7758c08b882b764a3ea055f1d3ccf5aa48500fd84be70ca455eccb88725d SHA512 c4bea375b780ed39fac250f81692a987bc72bba3856ad429d1f8d6be7c3ce457a34621d43e2abc9169f6e74f73674dbb95e724fabf26ce6a1b0ef73de9eb4fa5 WHIRLPOOL 1ef10c0c89800bae7908a41f8675f0aa034554079957974c30de4e8e0f253fa9b5bb2e132a7fd0adbf692205cb1c6b2783ea5c2e44ea9063ad840af3e7a6fbca
+DIST leim-1.34-pkg.tar.gz 1811136 SHA256 1c93f41f9e5f443d9377e34da19732d85e7eb758f569b0a155d1304c76bb17f8 SHA512 c6426544c51c8ad4a500337e391e913bb6e6ac2c39f5d9636fc5d832a4dbe61a0ca0a20abf1d28a8691a1b6323946e23237b699c01208137e4c489a0c2ef03bb WHIRLPOOL 6cdae6b66a4d4f12193f45f553665e4829b25f2c35c1242d475936991b1254361a32ca6e7b12d2dc2e93cea42a4f871eaffdf5aedac8a0d9bd97295d75961ce2
